<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailEditText" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/email_hint"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordEditText" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/loginButton" android:hint="@string/hint_password"/>
        <Button
                android:text="@string/login_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="loginButtonOnClick"/>
        <Button
                android:text="@string/signup_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button" android:onClick="signUpButtonOnClick"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>