<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp" android:id="@+id/linearLayout2">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailEditText" android:layout_weight="1" android:hint="@string/email_hint"/>
        <Button
                android:text="@string/accept_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/acceptButton" android:layout_weight="1"/>
        <Button
                android:text="@string/cancel_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cancelButton" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/signOutButton"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button0"/>
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button1"/>
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button2"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button3"/>
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button4"/>
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button5"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button6"/>
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button7"/>
            <Button
                    android:layout_width="72dp"
                    android:layout_height="72dp" android:id="@+id/button8"/>
        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="@string/signout_button_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signOutButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="signOutButtonOnClick"/>
</android.support.constraint.ConstraintLayout>